.apex/unpackaged/objects/rh2__PS_Rollup_Dummy__c.object
<CustomObject>
    <description>Test object for rolling up data</description>
    <fields>
        <fullName>rh2__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rollup Dummies</relationshipLabel>
        <relationshipName>Rollup_Dummies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Parent_Dummy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Dummy</label>
        <referenceTo>rh2__PS_Rollup_Dummy__c</referenceTo>
        <relationshipLabel>Rollup Dummies</relationshipLabel>
        <relationshipName>Rollup_Dummies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Numeric__c</fullName>
        <label>Test Numeric</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Rollup Dummy</label>
    <nameField>
        <displayFormat>RDM-{000}</displayFormat>
        <label>Rollup Dummy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Dummies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>